--- a/guide/개발환경_v0.7
+++ b/guide/개발환경_v0.7
@@ -340,7 +340,7 @@
           git pull origin master
           git add .
           git commit -m "first commit"
-          git push origin master
+          git push -u origin master
 
        -- 로컬에서 git을 이용해서 파일을 만들고 넣는 방법
            > jjj.py
@@ -358,8 +358,6 @@
                 git branch
           4. 현재의 파일을 서버리파지토리로 이동
                 git push origin master
-          5. 리모트의 파일을 로컬에 저장
-                git clone https://github.com/roian1974/tcf.git
 
 
        -- setup.py 파일을 작성한다.
